# OSARoles

./: .project
etcd/: README.rst  setup.cfg
etcd/defaults/: main.yml
etcd/handlers/: main.yml
etcd/meta/: .galaxy_install_info  main.yml
etcd/tasks/: etcd_init.yml  etcd_init_systemd.yml  etcd_init_upstart.yml  etcd_install.yml  etcd_install_apt.yml  etcd_install_yum.yml  etcd_post_install.yml  etcd_post_install_ssl.yml  main.yml
etcd/templates/: systemd-etcd-override.conf.j2  systemd-etcd.conf.j2  upstart-etcd.conf.j2  upstart-etcd.override.j2
etcd/tests/: inventory  test.yml
etcd/vars/: redhat-7.yml  ubuntu-14.04.yml  ubuntu-16.04.yml
openstack_openrc/: .gitreview  CONTRIBUTING.rst  README.rst  setup.cfg  tox.ini
openstack_openrc/defaults/: main.yml
openstack_openrc/examples/: playbook.yml
openstack_openrc/meta/: .galaxy_install_info
openstack_openrc/tasks/: main.yml
openstack_openrc/templates/: clouds.yaml.j2  openrc.j2
openstack_openrc/tests/: openstack_openrc-overrides.yml  test.yml
os_glance/: .gitreview  CONTRIBUTING.rst  README.rst  setup.cfg
os_glance/defaults/: main.yml
os_glance/examples/: playbook.yml
os_glance/handlers/: main.yml
os_glance/meta/: .galaxy_install_info  main.yml
os_glance/tasks/: glance_db_setup.yml  glance_init_common.yml  glance_init_systemd.yml  glance_init_upstart.yml  glance_install.yml  glance_install_apt.yml  glance_install_yum.yml  glance_post_install.yml  glance_pre_install.yml  glance_service_setup.yml  main.yml
os_glance/templates/: glance-api-paste.ini.j2  glance-api.conf.j2  glance-cache.conf.j2  glance-manage.conf.j2  glance-registry.conf.j2  glance-scrubber.conf.j2  glance-systemd-init.j2  glance-systemd-tmpfiles.j2  glance-upstart-init.j2
os_glance/tests/: inventory  test-glance-functional.yml  test.yml
os_glance/vars/: redhat-7.yml  ubuntu-16.04.yml
os_magnum/: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  setup.cfg  tox.ini
os_magnum/defaults/: main.yml
os_magnum/examples/: playbook.yml
os_magnum/extras/: group_vars_magnum.yml  os-magnum-install.yml  repo_magnum.yml  user_secrets_magnum.yml
os_magnum/handlers/: main.yml
os_magnum/meta/: .galaxy_install_info  main.yml
os_magnum/tasks/: database-setup.yml  install.yml  magnum_init.yml  magnum_init_common.yml  magnum_init_systemd.yml  magnum_init_upstart.yml  magnum_install_apt.yml  main.yml  post-install.yml  pre-install.yml  service-setup.yml
os_magnum/templates/: magnum-systemd-init.j2  magnum.conf.j2  upstart-init.j2
os_magnum/tests/: ansible-role-requirements.yml  inventory  magnum-test-vars.yml  os_magnum-overrides.yml  test-install-haproxy.yml  test-install-heat.yml  test-install-magnum.yml  test-magnum-functional.yml  test.yml
os_magnum/vars/: debian.yml
os_nova/: .gitreview  CONTRIBUTING.rst  README.rst  setup.cfg  tox.ini
os_nova/defaults/: main.yml
os_nova/examples/: playbook.yml
os_nova/handlers/: main.yml
os_nova/meta/: .galaxy_install_info  main.yml
os_nova/tasks/: main.yml  nova_compute.yml  nova_compute_ironic.yml  nova_compute_key_distribute.yml  (+21 more)
(+556 files in other folders)
