[metadata]
name = ansible-etcd
summary = Role for setting up etcd clusters and proxies
description-file =
    README.rst
author = Logan V.
author-email = logan2211@gmail.com
home-page = https://logan.protiumit.com
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
